adding profile page

--- a/templates/mobile/pictures/picture.html
+++ b/templates/mobile/pictures/picture.html
@@ -28,7 +28,8 @@
 	        <img src="{{picture.standard_resolution_url}}"></img>
 	    </div>
 
-        <!--<div class="social-share-container profile-social-container">
+        <!--
+        <div class="social-share-container profile-social-container">
             <div class="social-share-container-item facebook-share-item" onclick="fbShare('http://ighottest.com{{request.get_full_path}}')">
                 <img src="http://img2.wikia.nocookie.net/__cb20130501121248/logopedia/images/f/fb/Facebook_icon_2013.svg"></img>
             </div>
